Old NBT data recognition for 1.21.5+ servers